# coding-puzzles

./: README.rst
99problems/: p21.hs  p23.hs
advent-of-code/: README.md  advent-of-code.cabal  day01-2.hs  day01.hs  day02.hs  day03-2.hs  day03.hs  day04.hs  day05.hs  day06.hs  day12.hs  day20.hs  stack.yaml
algorithms/nqueens/: nqueens.js
algorithms/powerset/: Main.hs
algorithms/subsetsum/: subsetsum.js
algorithms/toposort/: Main.hs
algorithms/two-number-sum/: Main.hs
angry-professor/: Main.hs
codeeval/: jsonmenu.js
count-derangements/: Main.hs
crypto/aes/: cbc.py  ctr.py
euler/: euler1.hs  euler10.hs  euler13.hs  euler14.hs  euler16.hs  euler18.hs  euler2.hs  euler20.hs  euler3.hs  euler4.hs  euler5.hs  euler6.hs  euler7.hs  euler8.hs
game-of-thrones/: Main.hs
greenbook/child-steps/: Main.hs
hackerrank/2d-array/: Main.hs  input.txt
hackerrank/2s_complement/: 2s_complement.hs  2s_complement.py
hackerrank/a-very-big-sum/: .gitignore  a-very-big-sum.cabal
hackerrank/alternating-characters/: Main.hs
hackerrank/anagram/: anagram  anagram.hi  anagram.hs  output.txt
hackerrank/array-sum/: Main.hs
hackerrank/arrays-dsdfdf/: Main.hs
hackerrank/balanced-parentheses/: Main.hs
hackerrank/bfs-shortest-reach/: input.txt  main.py
hackerrank/bike-racers/: input1.txt  input5.txt  main.js
hackerrank/candies/: a.out  memset.c
hackerrank/coin-change/: Main.hs
hackerrank/common-divisor/: Main.hs  input.txt
hackerrank/connected-cell-in-a-grid/: Main.hs  input1.txt
hackerrank/count-luck/: .flowconfig  main.js
hackerrank/cut-the-tree/: Main.hs  a.out  cut-the-tree.cabal  cut-the-tree.cpp  index.js  input01.txt  input06.txt
hackerrank/diagonal-difference/: Main.hs  diagonal-difference.cabal  stack.yaml
hackerrank/equivalent-passwords/: Main.hs  input.txt
hackerrank/euler/: euler002.hs  euler119.hs  tmp
hackerrank/eval-ex/: Main.hs
hackerrank/even-tree/: Main.hs  main.js
hackerrank/favourite-sequence/: main.js
hackerrank/fibonacci-fp/: Main.hs  README.md  fib-dp.txt  fib-iter.txt  input.txt
hackerrank/fibonacci-modified/: Main.hs
hackerrank/find-median-1/: index.js  input.txt  input03.txt  output03.txt
hackerrank/flowers/: flowers  flowers.hi  flowers.hs
hackerrank/fp-filter-array/: Main.hs
hackerrank/fp-filter-position/: Main.hs
hackerrank/fp-update-list/: Main.hs  fp-update-list.cabal
hackerrank/funny-string/: funny-string.cabal
hackerrank/gcd/: Main.hs
hackerrank/gem-stones/: Main.hs
hackerrank/ice-cream/: .gitignore  ice-cream.cabal
hackerrank/lets-play-tawla/: Main.hs
hackerrank/make-it-anagram/: Main.hs  input.txt
hackerrank/missing-numbers/: index.js
hackerrank/missing-numbers-fp/: Main.hs
hackerrank/no-prefix-set/: Main.hs
hackerrank/pairs/: pairs.cabal
hackerrank/pangrams/: Main.hs
hackerrank/plus-minus/: plus-minus.cabal
hackerrank/plus-minus/src/: Main.hs
hackerrank/prefix-compression/: Main.hs
hackerrank/remove-duplicates/: Main.hs
hackerrank/rotate-string/: input.txt  rotate-string.cabal
hackerrank/sherlock-and-array/: index.js
hackerrank/silly-compressor/: Main.hs
hackerrank/solve-me-first/: Main.hs  cabal.sandbox.config  solve-me-first.cabal
hackerrank/solve-me-second/: LICENSE  Main.hs  cabal.sandbox.config  solve-me-second.cabal  stack.yaml
hackerrank/sparse-arrays/: Main.hs
hackerrank/staircase/: Main.hs
ice-cream/: Main.hs  README.md  ice-cream.cabal  stack.yaml
interviewstreet/: 2s_complement.hs
js-basics/: heap.js  npm-shrinkwrap.json  package.json  quicksort.js
msearch/: README.markdown  input.txt  msearch.cabal  msearch.py
msearch/src/: Main.hs  Main.java
quicksort3/: Solution.java  input.txt
rust/linkedlist/: llist.rs  (+2 more)
shortest-path/: map.txt  shortest-path.cabal  shortest-path.py
sorting/: heapsort.py  quicksort.hs
staircase/: Main.hs
trees/: bintree.js  mutbt.cljs
trees-from-inorder/: Main.hs  README.md
(+44 files in other folders)
