name:                advent-of-code
version:             0.1.0.0
homepage:            http://github.com/passy/coding-puzzles
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2015, Pascal Hartig
build-type:          Simple
cabal-version:       >=1.10

executable day01
  hs-source-dirs:      .
  main-is:             day01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day01-2
  hs-source-dirs:      .
  main-is:             day01-2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day02
  hs-source-dirs:      .
  main-is:             day02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text

executable day03
  hs-source-dirs:      .
  main-is:             day03.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day03-2
  hs-source-dirs:      .
  main-is:             day03-2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day04
  hs-source-dirs:      .
  main-is:             day04.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cryptohash
                     , bytestring
                     , base16-bytestring
