name:                msearch
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/msearch#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          passy@twitter.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable msearch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
