name:                diagonal-difference
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://www.hackerrank.com/challenges/diagonal-difference
license:             MIT
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@twitter.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable diagonal-difference
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  -- hs-source-dirs:      
  default-language:    Haskell2010
